fix: free trial button

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                     
                     <!-- col right -->
                     <div class="col-33bottom">
-                        <button class="btn-large btn-tertiary" type="button">Inizia la tua prova gratuita</button>
+                        <button id="free-trial-btn" class="btn-large btn-tertiary" type="button">Inizia la tua prova gratuita</button>
                     </div>
                     <!--/ col right -->
                 </div>
