--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             <div class="container-small">
                 <h2 class="title">Trova il piano business che fa per te</h2>
 
-                <input type="radio" id="fatturazione mensile" name="fav_fatturazione" value="Fatturazione Mensile">
-                  <label class="invoice" for="html">Fatturazione Mensile</label>
-                  <input type="radio" id="fatturazione annuale" name="fav_fatturazione" value="Fatturazione Annuale">
-                  <label class="invoice" for="css">Fatturazione Annuale</label>
+                <input type="radio" id="fatturazione-mensile" name="fav_fatturazione" value="Fatturazione Mensile">
+                  <label class="invoice" for="fatturazione-mensile">Fatturazione Mensile</label>
+                  <input type="radio" id="fatturazione-annuale" name="fav_fatturazione" value="Fatturazione Annuale">
+                  <label class="invoice" for="fatturazione-annuale">Fatturazione Annuale</label>
 
                 <div class="row">
                     <!-- column 1 -->
