--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <!-- dx -->
                     <div class="col-33bottom">
                         <div class="plans plans-bottom dx">
-                            <button class="btn btn-large" type="button">Contatta l'ufficio vendite</button>
+                            <button class="btn btn-quaternary" type="button">Contatta l'ufficio vendite</button>
                         </div>
                     </div>
                     <!-- /dx -->
